--- a/app/translations/de.json
+++ b/app/translations/de.json
@@ -1,31 +1,34 @@
 {
-  "boilerplate.components.Footer.author.message": "Mit Liebe gemacht von {author}.",
-  "boilerplate.components.Footer.license.message": "Dieses Projekt wird unter der MIT-Lizenz veröffentlicht.",
-  "boilerplate.components.Header.features": "",
-  "boilerplate.components.Header.home": "",
-  "boilerplate.containers.FeaturePage.css.header": "",
-  "boilerplate.containers.FeaturePage.css.message": "Die nächste Generation von CSS",
-  "boilerplate.containers.FeaturePage.feedback.header": "Sofortiges Feedback",
-  "boilerplate.containers.FeaturePage.feedback.message": "Genießen Sie die beste Entwicklungserfahrung und programmieren Sie Ihre App so schnell wie noch nie! Ihre Änderungen an dem CSS und JavaScript sind sofort reflektiert, ohne die Seite aktualisieren zu müssen. So bleibt der Anwendungszustand bestehen, auch wenn Sie etwas in dem darunter liegenden Code aktualisieren!",
-  "boilerplate.containers.FeaturePage.header": "",
-  "boilerplate.containers.FeaturePage.internationalization.header": "Komplette i18n Standard-Internationalisierung und Pluralisierung",
-  "boilerplate.containers.FeaturePage.internationalization.message": "Das Internet ist global. Mehrsprachige- und Pluralisierungsunterstützung ist entscheidend für große Web-Anwendungen.",
-  "boilerplate.containers.FeaturePage.javascript.header": "Das Internet ist global. Mehrsprachige- und Pluralisierungsunterstützung ist entscheidend für große Web-Anwendungen.",
-  "boilerplate.containers.FeaturePage.javascript.message": "Benutzen Sie ES6 template strings, object destructuring, arrow functions, JSX syntax und mehr, heute.",
-  "boilerplate.containers.FeaturePage.network.header": "",
-  "boilerplate.containers.FeaturePage.network.message": "The next frontier in performant web apps: availability without a\n      network connection from the instant your users load the app.",
-  "boilerplate.containers.FeaturePage.routing.header": "Standard Routing",
-  "boilerplate.containers.FeaturePage.routing.message": "Schreiben Sie CSS, das am selben Ort wie ihre Komponenten ist. Deterministisch generierte, einzigartige Klassennamen halten die Spezifität niedrig während styling Konflikte vermieden werden. Senden Sie nur das CSS an ihre Benutzer welches dann wirklich sichtbar ist für die schnellste Performance!",
-  "boilerplate.containers.FeaturePage.scaffolding.header": "Schnelles Scaffolding",
-  "boilerplate.containers.FeaturePage.scaffolding.message": "Automatisieren Sie die Kreation von Komponenten, Containern, Routen, Selektoren und Sagas – und ihre Tests – direkt von dem Terminal!",
-  "boilerplate.containers.FeaturePage.state_management.header": "Berechenbare Stateverwaltung",
-  "boilerplate.containers.FeaturePage.state_management.message": "Unidirectional data flow erlaubt uns alle Änderungen ihrer Applikation zu loggen und time travel debugging einzusetzen.",
-  "boilerplate.containers.HomePage.start_project.header": "Beginnen Sie Ihr nächstes React Projekt in Sekunden",
-  "boilerplate.containers.HomePage.start_project.message": "Ein skalierendes, offline-first Fundament mit der besten DX und einem Fokus auf Performance und bewährte Methoden",
-  "boilerplate.containers.HomePage.tryme.atPrefix": "",
-  "boilerplate.containers.HomePage.tryme.header": "Probiere mich!",
-  "boilerplate.containers.HomePage.tryme.message": "Zeige die Github Repositories von",
-  "boilerplate.containers.LocaleToggle.de": "",
-  "boilerplate.containers.LocaleToggle.en": "",
-  "boilerplate.containers.NotFoundPage.header": "Seite nicht gefunden."
+  "NicolaApp.components.Footer.author.message": "",
+  "NicolaApp.components.Footer.license.message": "",
+  "NicolaApp.components.Header.features": "",
+  "NicolaApp.components.Header.home": "",
+  "NicolaApp.components.Header.loginButtonText": "",
+  "NicolaApp.components.Header.toDosButton": "",
+  "NicolaApp.containers.FeaturePage.css.header": "",
+  "NicolaApp.containers.FeaturePage.css.message": "",
+  "NicolaApp.containers.FeaturePage.feedback.header": "",
+  "NicolaApp.containers.FeaturePage.feedback.message": "",
+  "NicolaApp.containers.FeaturePage.header": "",
+  "NicolaApp.containers.FeaturePage.internationalization.header": "",
+  "NicolaApp.containers.FeaturePage.internationalization.message": "",
+  "NicolaApp.containers.FeaturePage.javascript.header": "",
+  "NicolaApp.containers.FeaturePage.javascript.message": "",
+  "NicolaApp.containers.FeaturePage.network.header": "",
+  "NicolaApp.containers.FeaturePage.network.message": "",
+  "NicolaApp.containers.FeaturePage.routing.header": "",
+  "NicolaApp.containers.FeaturePage.routing.message": "",
+  "NicolaApp.containers.FeaturePage.scaffolding.header": "",
+  "NicolaApp.containers.FeaturePage.scaffolding.message": "",
+  "NicolaApp.containers.FeaturePage.state_management.header": "",
+  "NicolaApp.containers.FeaturePage.state_management.message": "",
+  "NicolaApp.containers.HomePage.start_project.header": "",
+  "NicolaApp.containers.HomePage.start_project.message": "",
+  "NicolaApp.containers.HomePage.tryme.atPrefix": "",
+  "NicolaApp.containers.HomePage.tryme.header": "",
+  "NicolaApp.containers.HomePage.tryme.message": "",
+  "NicolaApp.containers.LocaleToggle.de": "",
+  "NicolaApp.containers.LocaleToggle.en": "",
+  "NicolaApp.containers.LocaleToggle.it": "",
+  "NicolaApp.containers.NotFoundPage.header": ""
 }
