--- a/app/translations/it.json
+++ b/app/translations/it.json
@@ -1,34 +1,34 @@
 {
-  "NicolaApp.components.Footer.author.message": "Made with love by {author}.",
-  "NicolaApp.components.Footer.license.message": "This project is licensed under the MIT license.",
+  "NicolaApp.components.Footer.author.message": "Sviluppato da {author}.",
+  "NicolaApp.components.Footer.license.message": "Questo progetto è concesso in licenza con la licenza MIT.",
   "NicolaApp.components.Header.features": "Features",
   "NicolaApp.components.Header.home": "Home",
   "NicolaApp.components.Header.loginButtonText": "LOGIN",
   "NicolaApp.components.Header.toDosButton": "ToDo List",
   "NicolaApp.containers.FeaturePage.css.header": "Features",
   "NicolaApp.containers.FeaturePage.css.message": "Next generation CSS",
-  "NicolaApp.containers.FeaturePage.feedback.header": "Instant feedback",
-  "NicolaApp.containers.FeaturePage.feedback.message": "Enjoy the best DX and code your app at the speed of thought! Your\n    saved changes to the CSS and JS are reflected instantaneously\n    without refreshing the page. Preserve application state even when\n    you update something in the underlying code!",
+  "NicolaApp.containers.FeaturePage.feedback.header": "Feedback istantaneo",
+  "NicolaApp.containers.FeaturePage.feedback.message": "Goditi il ​​miglior DX e codifica la tua app alla velocità del pensiero! Le modifiche salvate a CSS e JS si riflettono istantaneamente senza aggiornare la pagina. Conserva lo stato dell'applicazione anche quando aggiorni qualcosa nel codice sottostante!",
   "NicolaApp.containers.FeaturePage.header": "Features",
-  "NicolaApp.containers.FeaturePage.internationalization.header": "Complete i18n Standard Internationalization & Pluralization",
-  "NicolaApp.containers.FeaturePage.internationalization.message": "Scalable apps need to support multiple languages, easily add and support multiple languages with `react-intl`.",
-  "NicolaApp.containers.FeaturePage.javascript.header": "Next generation JavaScript",
-  "NicolaApp.containers.FeaturePage.javascript.message": "Use template strings, object destructuring, arrow functions, JSX\n    syntax and more, today.",
+  "NicolaApp.containers.FeaturePage.internationalization.header": "i18n Standard Internationalization & Pluralization",
+  "NicolaApp.containers.FeaturePage.internationalization.message": "Le app scalabili devono supportare più lingue, aggiungi e supporta facilmente più lingue con `react-intl`.",
+  "NicolaApp.containers.FeaturePage.javascript.header": "JavaScript di prossima generazione",
+  "NicolaApp.containers.FeaturePage.javascript.message": "Usa le stringhe dei modelli, la destrutturazione degli oggetti, le funzioni freccia, la sintassi JSX e altro ancora.",
   "NicolaApp.containers.FeaturePage.network.header": "Offline-first",
-  "NicolaApp.containers.FeaturePage.network.message": "The next frontier in performant web apps: availability without a\n      network connection from the instant your users load the app.",
+  "NicolaApp.containers.FeaturePage.network.message": "La prossima frontiera nelle app web performanti: disponibilità senza una connessione di rete dall'istante in cui gli utenti caricano l'app.",
   "NicolaApp.containers.FeaturePage.routing.header": "Industry-standard routing",
-  "NicolaApp.containers.FeaturePage.routing.message": "Write composable CSS that's co-located with your components for\n    complete modularity. Unique generated class names keep the\n    specificity low while eliminating style clashes. Ship only the\n    styles that are on the page for the best performance.",
+  "NicolaApp.containers.FeaturePage.routing.message": "Scrivi CSS componibili che sono collocati insieme ai tuoi componenti per una modularità completa. I nomi di classe univoci generati mantengono la specificità bassa eliminando i conflitti di stile. Utilizza solo gli stili che sono sulla pagina per le migliori prestazioni.",
   "NicolaApp.containers.FeaturePage.scaffolding.header": "Quick scaffolding",
-  "NicolaApp.containers.FeaturePage.scaffolding.message": "Automate the creation of components, containers, routes, selectors\n  and sagas - and their tests - right from the CLI!",
+  "NicolaApp.containers.FeaturePage.scaffolding.message": "Automatizza la creazione di componenti, container, percorsi, selettori e saghe - e i loro test - direttamente dalla CLI!",
   "NicolaApp.containers.FeaturePage.state_management.header": "Predictable state management",
-  "NicolaApp.containers.FeaturePage.state_management.message": "Unidirectional data flow allows for change logging and time travel\n    debugging.",
-  "NicolaApp.containers.HomePage.start_project.header": "Start your next react project in seconds",
-  "NicolaApp.containers.HomePage.start_project.message": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "NicolaApp.containers.FeaturePage.state_management.message": "Il flusso di dati unidirezionale consente la registrazione delle modifiche e il debug dei viaggi nel tempo.",
+  "NicolaApp.containers.HomePage.start_project.header": "Crea il tuo prossimo progetto React in pochi secondi",
+  "NicolaApp.containers.HomePage.start_project.message": "Una base altamente scalabile, offline-first con i migliori DX e un focus su prestazioni e best practice",
   "NicolaApp.containers.HomePage.tryme.atPrefix": "@",
-  "NicolaApp.containers.HomePage.tryme.header": "Try me!",
-  "NicolaApp.containers.HomePage.tryme.message": "Show Github repositories by",
+  "NicolaApp.containers.HomePage.tryme.header": "Provami!",
+  "NicolaApp.containers.HomePage.tryme.message": "Mostra i progetti Github di",
   "NicolaApp.containers.LocaleToggle.de": "de",
   "NicolaApp.containers.LocaleToggle.en": "en",
   "NicolaApp.containers.LocaleToggle.it": "it",
-  "NicolaApp.containers.NotFoundPage.header": "Page not found."
+  "NicolaApp.containers.NotFoundPage.header": "Pagina non trovata"
 }
